Finally got ExerciseSet docmaker to build latex file

--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -1,192 +1,157 @@
+
+
 \documentclass{article}
 
-\usepackage[margin=1.5in]{geometry}
+\usepackage[margin=0.625in, rmargin=3in]{geometry}
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {Physics 203 Lab Equipment} }
-\hypersetup{pdfauthor = {David J. Ulrich}, pdfsubject = {Physics} }
+\hypersetup{pdftitle = {Physics 203 Homework} }
+\hypersetup{pdfauthor = {}, pdfsubject = {Physics} }
 
 \pagestyle{plain}
 
-\renewcommand{\arraystretch}{1.5}
-\renewcommand{\tabcolsep}{0.2cm}
-
 \begin{document}
 
+\newpage
+
 \begin{center}
-
-\textbf{\large LABORATORY EQUIPMENT REQUEST FORM}
-
-\vspace{0.2in}
-
-\begin{tabular}{p{1.25in}p{1.25in}p{1.25in}p{1.25in}}
-INSTRUCTOR: & David J. Ulrich & LAB SECTION: & PHY203 \\
-DATE(S) NEEDED: & \textbf{Aug 05, 2013} & TIME NEEDED: & \textbf{6:00 pm} \\
-LAB TITLE: & \multicolumn{3}{l}{\textbf{Magnets and Motors}} \\
-&&& \\
-FILLED BY: & \underline{\makebox[1in]{}} 
-& DATE FILLED: & \underline{\makebox[1in]{}} \\
-\end{tabular}
-
-\vspace{0.2in}
-
-\begin{tabular}{|c|p{2.5in}|l|}
-\hline
-\makebox[1.0in]{\textbf{Quantity}} & 
-\makebox[2.5in]{\textbf{\centering Items}} & 
-\makebox[1.0in]{\textbf{Location}} \\
-\hline
-
-6 & 
-Banana plug \& plug & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-End of aisle E \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Compasses & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-E02 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Calipers & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-E02 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Magnetic field sensors & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-E26 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Air coil solenoids & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-E29 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-AC/DC kits & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-E35 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-12 & 
-Banana plug \& clip & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-End of aisle E \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Multimeters (yellow) & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-F02 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Multimeters (blue) & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-F02 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Large wire coils & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-P24 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Large 6V battery & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-P48 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-6 & 
-Breadboards & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-P47 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-12 & 
-Alligator clips & 
-\begin{minipage}{1.0in} 
-\raggedright 
-\vspace{1ex}
-F04 \par
-\vspace{1ex}
-\end{minipage}
-\\
-
-\hline
-\end{tabular}
-
+\LARGE{Physics 203 Lecture: Electric force and potential} \\[2mm] 
+\small{\sf }
 \end{center}
 
-\vspace{0.2in}
 
-Special Instructions: \par
+\textbf{1.}
+% 
+\marginpar{\footnotesize\sf \newcounter{listcnt0}
+\begin{list}{(\alph{listcnt0})}
+{
+\usecounter{listcnt0}
+\setlength{\rightmargin}{\leftmargin}
+}
+
+\item 8.0 yr
+
+\item 6.4 yr
+
+\item 3.6 yr
+\end{list}}
+%
+\quad An earthbound sibling observers her twin to depart from earth at a
+speed 60\% the speed of light. After 10.0 years, the travelling twin
+returns having travelled 3.0 light-years and back. (a) Calculate the
+proper time the travelling twin was aboard the spaceship. (b) From the
+traveler's vantage point, the earth-bound twin's clocks tick slow. How
+much time does she observe to pass on earth? (c) During the moment of
+acceleration 3.0 light-years out, the clocks aboard ship go out of
+synch with those on earth. Calculate how far ahead the
+desynchronization put the clocks on the ship.
+%
+
+\textbf{2.}
+% 
+\marginpar{\footnotesize\sf \newcounter{listcnt0}
+\begin{list}{(\alph{listcnt0})}
+{
+\usecounter{listcnt0}
+\setlength{\rightmargin}{\leftmargin}
+}
+
+\item 34.9 AU
+
+\item 74.8 yr
+\end{list}}
+%
+\quad Halley's comet has a highly elongated orbit. The eccentricity of
+its orbit is 0.967 with a distance of closest approach equal to
+0.586 AU. (a) What is the maximum distance Halley's comet reaches
+before it turns around toward the sun? Express your answer in units
+of AU. (For reference, Neptune's average distance from the sun is
+30 AU.) (b) When distances are measured in astronomical units (AU)
+and time is measured in years, Kepler's Third Law simplifies to
+$T^2 = a^3$ for orbits around the sun. Determine the period
+of Halley's comet in years. (Hint: Halley's original estimate was
+76 years).
+%
+
+\textbf{3.}
+% 
+\marginpar{\footnotesize\sf $\pi^-$ = $\bar{u}d$}
+%
+\quad The pion used to be thought of as the particle that mediates the
+attractive interaction between nucleons. For example, a proton can
+convert into a neutron by absorbing a negative pion. Knowing that the
+quark content of the proton is $uud$ and the neutron is
+$udd$, what must the quark content of the negative pion be?
+Justify your answer.
+%
+
+\textbf{4.}
+% 
+\marginpar{\footnotesize\sf \newcounter{listcnt0}
+\begin{list}{(\alph{listcnt0})}
+{
+\usecounter{listcnt0}
+\setlength{\rightmargin}{\leftmargin}
+}
+
+\item $p_x$ = 0 kg-m/s
+
+\item $p_y$ = 0.0684 kg-m/s
+
+\item $KE$ = 10 joules
+\end{list}}
+%
+\quad Figure \hyperref[fig:elas-col]{\ref*{fig:elas-col}} illustrates a possible elastic collision
+of two identical particles. They both have an initial speed of
+100 m/s, but the final speeds are different. This shows that even
+if we could make the molecular speeds in an ideal gas the same,
+over time the internal elastic collisions will spread the speed
+distribution.
 
 
+\begin{center}
+\def\vx{0}
+\def\vy{0.684}
+\begin{tikzpicture}
+\node (c) at (0,0) [draw,starburst] {};
+\node (v1) at ($(c)+(180:2)+(-\vx,-\vy)$) [fill,circle] {};
+\node (v2) at ($(c)+(0:2)+(-\vx,-\vy)$) [draw,circle] {};
+\node (u1) at ($(c)+(60:2)+(\vx,\vy)$) [fill,circle] {};
+\node (u2) at ($(c)+(240:2)+(\vx,\vy)$) [draw,circle] {};
+\draw [->-] (v1) -- (c) node [pos=0.5,above=1mm] {$v_1$};
+\draw [->-] (v2) -- (c) node [pos=0.5,above=1mm] {$v_2$};
+\draw [->-] (c) -- (u1) node [pos=0.5,above left] {$u_1$};
+\draw [->-] (c) -- (u2) node [pos=0.5,below right] {$u_2$};
+\end{tikzpicture}
+\captionof{figure}{Elastic collision}
+\label{fig:elas-col}
+\end{center}
 
-\underline{\makebox[\textwidth]{\textbf{}}} \par
 
-\underline{\makebox[\textwidth]{\textbf{}}} \par
+In this example the initial velocity vectors are
+%
+\begin{equation*}
+v_1 = 100.0 \text{ at }  20\dg \qquad
+v_2 = 100.0 \text{ at } 160\dg
+\end{equation*}
+and the final velocity vectors are
+%
+\begin{equation*}
+u_1 =  66.6 \text{ at } 225\dg \qquad
+u_2 = 124.8 \text{ at }  68\dg
+\end{equation*}
+Confirm that this collision is elastic by showing that both
+momentum and kinetic energy are conserved. For your answer,
+assume each a mass is one gram.
+%
 
-\underline{\makebox[\textwidth]{\textbf{}}} \par
+\textbf{5.}
+% 
+\marginpar{\footnotesize\sf \(5.57 \times 10^{-13}\) tesla}
+%
+\quad An electron is travelling east at a speed of 100 m/s. It encounters a magnetic field pointing north. What magnitude of magnetic field is required to overcome the acceleration due to gravity effectively levitating the electron?
+%
 
-\vspace{0.2in}
-
-Please allow \underline{two weeks} to process requests.
 
 \end{document}
