--- a/apps/docmaker/templates/latex/hw.tex
+++ b/apps/docmaker/templates/latex/hw.tex
@@ -1,11 +1,12 @@
+{% load restructuredtext_tags %}
 \documentclass{article}
 
 \usepackage[margin=0.625in, rmargin=3in]{geometry}
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {{ '{' }}{{ course.title }} Homework{{ '}' }} }
-\hypersetup{pdfauthor = {{ '{' }}{{ course.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
+\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} Homework{{ '}' }} }
+\hypersetup{pdfauthor = {{ '{' }}{{ classroom.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
 
 \pagestyle{plain}
 
@@ -14,17 +15,17 @@
 \newpage
 
 \begin{center}
-\LARGE{{ '{' }}{{ course.title }} {{ activity.label }}{{ '}' }} \\[2mm] 
-\small{{ '{' }}\sf {{ event.date.strftime('%b %d, %Y') }}{{ '}' }}
+\LARGE{{ '{' }}{{ classroom.title }} {{ activity.label }}{{ '}' }} \\[2mm] 
+\small{{ '{' }}\sf {{ activity_block.date|date:"b d, Y" }}{{ '}' }}
 \end{center}
 
-{% for p in problems %}
-\textbf{{ '{' }}{{ loop.index }}.{{ '}' }}
-{% if show.answers %}% 
+{% for p in problems.all %}
+\textbf{{ '{' }}{{ forloop.counter }}.{{ '}' }}
+{% if 'answers' in show %}% 
 \marginpar{{ '{' }}\footnotesize\sf {{ p.answer|rst2latex }}{{ '}' }}
 {% endif %}%
 \quad {{ p.question|rst2latex }}
-{% if show.solutions %}%
+{% if 'solutions' in show %}%
 \par \textbf{Solution} 
 \par {{ p.solution|rst2latex }}
 {% endif %}%
