--- a/apps/docmaker/templates/latex/sy.tex
+++ b/apps/docmaker/templates/latex/sy.tex
@@ -1,24 +1,25 @@
+{% load restructuredtext_tags %}
 \documentclass{article}
 
 \usepackage[margin=1.33in]{geometry}
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {{ '{' }}{{ course.title }} Syllabus{{ '}' }} }
-\hypersetup{pdfauthor = {{ '{' }}{{ course.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
+\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} Syllabus{{ '}' }} }
+\hypersetup{pdfauthor = {{ '{' }}{{ classroom.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
 
 \pagestyle{plain}
 
 \begin{document}
 
 \begin{center}
-{{ '{' }}\LARGE {{ course.title }} Syllabus{{ '}' }}
+{{ '{' }}\LARGE {{ classroom.title }} Syllabus{{ '}' }}
 \vskip 0.25cm
-{{ '{' }}\large {{ course.subtitle }}{{ '}' }}
+{{ '{' }}\large {{ classroom.subtitle }}{{ '}' }}
 \vskip 0.25cm
-\includegraphics[width=\textwidth]{{ '{' }}{{ course.banner_path|latex_path }}{{ '}' }}
+\includegraphics[width=\textwidth]{{ '{' }}{{ classroom.banner_path|latex_path }}{{ '}' }}
 \vskip 0.25cm
-{{ '{' }}\large {{ course.season }} {{ course.year }}{{ '}' }}
+{{ '{' }}\large {{ classroom.season }} {{ classroom.year }}{{ '}' }}
 \end{center}
 
 \begin{center}
@@ -26,41 +27,41 @@
 \renewcommand{\tabcolsep}{0.2cm}
 \begin{tabular}{ll} 
 \hline
-CRN          & {{ course.crns }} (3 credits) \\ 
-Date/Time    & {{ course.meeting.time }} \\ 
-Campus       & {{ course.meeting.address }} \\ 
-Room         & {{ course.meeting.room }} \\ 
-Instructor   & {{ course.instructor.name }} \\ 
-Website      & \url{{ '{' }}{{ course.instructor.website }}{{ '}' }} \\ 
-E-mail       & \texttt{{ '{' }}{{ course.instructor.email }}{{ '}' }} \\ 
-Office       & {{ course.instructor.office.location }} \\ 
-Office Hours & {{ course.instructor.office.hours }} \\ 
+CRN          & {{ classroom.crns }} (3 credits) \\ 
+Date/Time    & {{ classroom.meeting.time }} \\ 
+Campus       & {{ classroom.meeting.address }} \\ 
+Room         & {{ classroom.meeting.room }} \\ 
+Instructor   & {{ classroom.instructor.name }} \\ 
+Website      & \url{{ '{' }}{{ classroom.instructor.website }}{{ '}' }} \\ 
+E-mail       & \texttt{{ '{' }}{{ classroom.instructor.email }}{{ '}' }} \\ 
+Office       & {{ classroom.instructor.office.location }} \\ 
+Office Hours & {{ classroom.instructor.office.hours }} \\ 
 \hline
 \end{tabular}
 \end{center}
 
-\section{Course Overview}
+\section{classroom Overview}
 
-This course will cover such topics as {{ course.topics.main|textjoin }}. {% if course.topics.also %} In addition, we will touch on some subjects 
-related to {{ course.topics.also|textjoin }}. {% endif %}{% if course.textbook %}Our textbook will be \emph{{ '{' }}{{ course.textbook.title }} 
-{% if course.textbook.edition %}({{ course.textbook.edition|ordinalize }} edition){% endif %}{{ '}' }} by {{ course.textbook.author }}. 
-{% if course.textbook.chapters %}We will be covering chapters {{ course.textbook.chapters }} in this course.{% endif %}{% endif %}
+This classroom will cover such topics as {{ classroom.topics.main|textjoin }}. {% if classroom.topics.also %} In addition, we will touch on some subjects 
+related to {{ classroom.topics.also|textjoin }}. {% endif %}{% if classroom.textbook %}Our textbook will be \emph{{ '{' }}{{ classroom.textbook.title }} 
+{% if classroom.textbook.edition %}({{ classroom.textbook.edition|ordinalize }} edition){% endif %}{{ '}' }} by {{ classroom.textbook.author }}. 
+{% if classroom.textbook.chapters %}We will be covering chapters {{ classroom.textbook.chapters }} in this classroom.{% endif %}{% endif %}
 
-The Course Content and Outcome Guide can be obtained online via the following hyperlink: 
-\url{{ '{' }}http://www.pcc.edu/ccog/default.cfm?fa=ccog&subject={{ course.dept_abbr }}&course={{ course.term }}{{ '}' }}. 
-This includes more course detail and outlines the course prerequisites.
+The classroom Content and Outcome Guide can be obtained online via the following hyperlink: 
+\url{{ '{' }}http://www.pcc.edu/ccog/default.cfm?fa=ccog&subject={{ classroom.dept_abbr }}&classroom={{ classroom.term }}{{ '}' }}. 
+This includes more classroom detail and outlines the classroom prerequisites.
 
-{{ course.notes|rst2latex }}
+{{ classroom.notes|rst2latex }}
 
 \clearpage
 
-{% if course.outcomes %}
+{% if classroom.outcomes %}
 
 \section{Intended Outcomes}
 
-After completion of this course, students will
+After completion of this classroom, students will
 
-{{ course.outcomes|rst2latex }}
+{{ classroom.outcomes|rst2latex }}
 
 {% endif %}
 
@@ -77,7 +78,7 @@ Your total grade will be a weighted average of all the assignments in class. The
 \hline
 \textbf{Category} & \textbf{Weight} \\ 
 \hline
-{% for x in course.grading.scheme %}
+{% for x in classroom.grading.scheme %}
 {{ x.category }} & {{ '{0:.0f}'.format(x.weight * 100) }}\% \\
 {% endfor %}
 \hline
@@ -85,7 +86,7 @@ Your total grade will be a weighted average of all the assignments in class. The
  
 \end{center}
 
-{{ course.grading.notes|rst2latex }}
+{{ classroom.grading.notes|rst2latex }}
 
 See \url{http://www.pcc.edu/resources/academic/standards-practices/} for more detail on PCC Grading Guidlines.
 
@@ -97,16 +98,16 @@ See \url{http://www.pcc.edu/resources/academic/standards-practices/} for more de
 Attendance is required for any lab, quiz, or exam. The instructor reserves the right to administer or refuse to admininster any make-up work for lack of attendance.
 
 \item[{Instructional ADA statement}] \leavevmode 
-If you require specific instructional accommodations, please notify me early in the course. A request for accommodation may require documentation of disability through the Office for Students with Disabilities at 977-4341.
+If you require specific instructional accommodations, please notify me early in the classroom. A request for accommodation may require documentation of disability through the Office for Students with Disabilities at 977-4341.
 
 \item[{Code of student conduct}] \leavevmode 
 Information may be found through this \url{http://www.pcc.edu/about/policy/student-rights/}.
 
 \item[{Academic integrity statement}] \leavevmode 
-Students are required to complete this course in accordance with the Student Rights and Responsibilities Handbook. Dishonest activities such as cheating on exams and submitting or copying work done by others will result in disciplinary actions including but not limited to receiving a failing grade. See the Academic Integrity Policy for further details: \url{http://www.pcc.edu/about/policy/student-rights/}.
+Students are required to complete this classroom in accordance with the Student Rights and Responsibilities Handbook. Dishonest activities such as cheating on exams and submitting or copying work done by others will result in disciplinary actions including but not limited to receiving a failing grade. See the Academic Integrity Policy for further details: \url{http://www.pcc.edu/about/policy/student-rights/}.
 
 \item[{Flexibility statement}] \leavevmode 
-The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather, and class problems.
+The instructor reserves the right to modify classroom content and/or substitute assignments and learning activities in response to institutional, weather, and class problems.
 
 \item[{Withdrawal policy}] \leavevmode 
 As the student, it is your responsibility to process a Drop via the Web or at a Registration Office within the specified time periods set forth by PCC. Deadlines can be located at \url{http://www.pcc.edu/registration/dropping.html}.
@@ -133,7 +134,7 @@ This following schedule should be considered tentative. In particular, based on 
 \textbf{Type} &
 \textbf{Title} &
 \hline
-{% for event in course.schedule %}
+{% for event in classroom.schedule %}
 {{ event.week }} &
 {{ event.weekday }} &
 {{ event.date.strftime('%b %d') }} &
@@ -145,13 +146,13 @@ This following schedule should be considered tentative. In particular, based on 
 
 \end{center}
 
-{% if course.outline %}
+{% if classroom.outline %}
 
 \clearpage
 
-\section{Course Content}
+\section{classroom Content}
 
-{{ course.outline|rst2latex }}
+{{ classroom.outline|rst2latex }}
 
 {% endif %}
 
