--- a/apps/docmaker/templates/latex/qz.tex
+++ b/apps/docmaker/templates/latex/qz.tex
@@ -4,7 +4,7 @@
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} Quiz{{ '}' }} }
+\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} {{ document_label }}{{ '}' }} }
 \hypersetup{pdfauthor = {{ '{' }}{{ classroom.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
 
 \pagestyle{headings}
