--- a/apps/docmaker/templates/latex/sy.tex
+++ b/apps/docmaker/templates/latex/sy.tex
@@ -5,7 +5,7 @@
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} Syllabus{{ '}' }} }
+\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} {{ document_label }}{{ '}' }} }
 \hypersetup{pdfauthor = {{ '{' }}{{ classroom.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
 
 \pagestyle{plain}
@@ -13,11 +13,13 @@
 \begin{document}
 
 \begin{center}
-{{ '{' }}\LARGE {{ classroom.title }} Syllabus{{ '}' }}
+{{ '{' }}\LARGE {{ classroom.title }} {{ document_label }}{{ '}' }}
 \vskip 0.25cm
 {{ '{' }}\large {{ classroom.subtitle }}{{ '}' }}
+{% if classroom.banner %}
 \vskip 0.25cm
 \includegraphics[width=\textwidth]{{ '{' }}{{ classroom.banner_path|latex_path }}{{ '}' }}
+{% endif %}
 \vskip 0.25cm
 {{ '{' }}\large {{ classroom.season }} {{ classroom.year }}{{ '}' }}
 \end{center}
@@ -27,11 +29,7 @@
 \renewcommand{\tabcolsep}{0.2cm}
 \begin{tabular}{ll} 
 \hline
-CRN          & {{ classroom.crns }} (3 credits) \\ 
-Date/Time    & {{ classroom.meeting.time }} \\ 
-Campus       & {{ classroom.meeting.address }} \\ 
-Room         & {{ classroom.meeting.room }} \\ 
-Instructor   & {{ classroom.instructor.name }} \\ 
+Instructor   & {{ classroom.instructor.public_name }} \\ 
 Website      & \url{{ '{' }}{{ classroom.instructor.website }}{{ '}' }} \\ 
 E-mail       & \texttt{{ '{' }}{{ classroom.instructor.email }}{{ '}' }} \\ 
 Office       & {{ classroom.instructor.office.location }} \\ 
@@ -40,81 +38,13 @@ Office Hours & {{ classroom.instructor.office.hours }} \\
 \end{tabular}
 \end{center}
 
-\section{classroom Overview}
+\section{Course Overview}
 
-This classroom will cover such topics as {{ classroom.topics.main|textjoin }}. {% if classroom.topics.also %} In addition, we will touch on some subjects 
-related to {{ classroom.topics.also|textjoin }}. {% endif %}{% if classroom.textbook %}Our textbook will be \emph{{ '{' }}{{ classroom.textbook.title }} 
-{% if classroom.textbook.edition %}({{ classroom.textbook.edition|ordinalize }} edition){% endif %}{{ '}' }} by {{ classroom.textbook.author }}. 
-{% if classroom.textbook.chapters %}We will be covering chapters {{ classroom.textbook.chapters }} in this classroom.{% endif %}{% endif %}
-
-The classroom Content and Outcome Guide can be obtained online via the following hyperlink: 
-\url{{ '{' }}http://www.pcc.edu/ccog/default.cfm?fa=ccog&subject={{ classroom.dept_abbr }}&classroom={{ classroom.term }}{{ '}' }}. 
-This includes more classroom detail and outlines the classroom prerequisites.
-
-{{ classroom.notes|rst2latex }}
+{{ classroom.overview|rst2latex }}
 
 \clearpage
 
-{% if classroom.outcomes %}
-
-\section{Intended Outcomes}
-
-After completion of this classroom, students will
-
-{{ classroom.outcomes|rst2latex }}
-
-{% endif %}
-
-\section{Grading Scheme}
-
-Your total grade will be a weighted average of all the assignments in class. The weight for each category of assignments is in the following table.
-
-\begin{center}
-
-\renewcommand{\arraystretch}{1.5}
-\renewcommand{\tabcolsep}{0.2cm}
-
-\begin{tabular}{lc} 
-\hline
-\textbf{Category} & \textbf{Weight} \\ 
-\hline
-{% for x in classroom.grading.scheme %}
-{{ x.category }} & {{ '{0:.0f}'.format(x.weight * 100) }}\% \\
-{% endfor %}
-\hline
-\end{tabular}
- 
-\end{center}
-
-{{ classroom.grading.notes|rst2latex }}
-
-See \url{http://www.pcc.edu/resources/academic/standards-practices/} for more detail on PCC Grading Guidlines.
-
-
-\section{Miscellaneous}
-
-\begin{description}
-\item[{Attendance and make-up policies}] \leavevmode 
-Attendance is required for any lab, quiz, or exam. The instructor reserves the right to administer or refuse to admininster any make-up work for lack of attendance.
-
-\item[{Instructional ADA statement}] \leavevmode 
-If you require specific instructional accommodations, please notify me early in the classroom. A request for accommodation may require documentation of disability through the Office for Students with Disabilities at 977-4341.
-
-\item[{Code of student conduct}] \leavevmode 
-Information may be found through this \url{http://www.pcc.edu/about/policy/student-rights/}.
-
-\item[{Academic integrity statement}] \leavevmode 
-Students are required to complete this classroom in accordance with the Student Rights and Responsibilities Handbook. Dishonest activities such as cheating on exams and submitting or copying work done by others will result in disciplinary actions including but not limited to receiving a failing grade. See the Academic Integrity Policy for further details: \url{http://www.pcc.edu/about/policy/student-rights/}.
-
-\item[{Flexibility statement}] \leavevmode 
-The instructor reserves the right to modify classroom content and/or substitute assignments and learning activities in response to institutional, weather, and class problems.
-
-\item[{Withdrawal policy}] \leavevmode 
-As the student, it is your responsibility to process a Drop via the Web or at a Registration Office within the specified time periods set forth by PCC. Deadlines can be located at \url{http://www.pcc.edu/registration/dropping.html}.
-
-\end{description}
-
-\clearpage
+{% if classroom.activityblock_set.all %}
 
 \section{Class Schedule}
 
@@ -134,25 +64,17 @@ This following schedule should be considered tentative. In particular, based on 
 \textbf{Type} &
 \textbf{Title} &
 \hline
-{% for event in classroom.schedule %}
-{{ event.week }} &
-{{ event.weekday }} &
-{{ event.date.strftime('%b %d') }} &
-{{ event.type }} &
-{{ event.heading }} \\
+{% for block in classroom.activityblock_set.all %}
+{{ block.week }} &
+{{ block.weekday }} &
+{{ block.date|date:"b d"|title }} &
+{{ block.type }} &
+{{ block.heading }} \\
 {% endfor %}
 \hline
 \end{tabular}
 
 \end{center}
-
-{% if classroom.outline %}
-
-\clearpage
-
-\section{classroom Content}
-
-{{ classroom.outline|rst2latex }}
 
 {% endif %}
 
